# permutation_web_server

./: Cargo.toml  Dockerfile  README.md  build_for_docker.sh  test.sh
.github/workflows/: rust.yml
src/: main.rs
