[package]
name = "permutation_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutation_way = {git = "https://github.com/corentinway/permutation_way_rs"}
actix-web = "3"
serde = "1"
env_logger = "0.9.0"